# evacuation-plan

./: CMakeLists.txt  Инструкция.txt
code/: edge.h  image.cpp  image.h  main.cpp  mainscene.cpp  mainscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paint.cpp  paint.h  paint.ui  paintscene.cpp  paintscene.h  setthroughput.cpp  setthroughput.h  setthroughput.ui
